--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -22,12 +22,12 @@ contact = "Contact"
 [params.hero]
 enable            = true
 bg                = "images/header-bg.jpg"
-title             = "BRING YOUR PRODUCT TO LIGHT"
-subtitle          = "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna"
+title             = "«Ocean : Inspire»"
+subtitle          = "Inspiring 100 Million People to Take Individual and Collective Action for Ocean Sustainability"
 btnText           = "Get Started"
 
 # counter
-disableCountdown  = false
+disableCountdown  = true
 countdownYear = "2021"
 countdownMonth = "12"
 countdownDay  = "31"
