--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -35,8 +35,8 @@ countdownDay  = "31"
 # About Section
 [params.about]
 enable      = true
-heading     = "Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam ipsa recusandae consequatur veniam, reiciendis odit quia eaque vel eius a."
-description = "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ulla-mco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque, aspernatur."
+heading     = "Mission Statement"
+description = "«Ocean : Inspire» is the brainchild of Leonardo Zangrando, to fulfill his mission to inspire 100 million people take individual and collective action for Ocean Sustainabiity. Leonardo's deep love for the Ocean starts back in his childhood and he has been swimming, diving, sailing since then. "
 
 [[params.about.sliderItem]]
 image   = "images/about/1.jpg"
